--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "type": "module",
     "scripts": {
         "start": "pm2 start ecosystem.config.cjs",
-        "restart": "pm2 start ecosystem.config.cjs"
+        "stop": "pm2 stop ecosystem.config.cjs",
+        "restart": "pm2 restart ecosystem.config.cjs",
+        "delete": "pm2 delete ecosystem.config.cjs" 
     },
     "dependencies": {
         "@aws-sdk/client-s3": "3.654.0",
